--- a/Css/main.css
+++ b/Css/main.css
@@ -1,3 +1,25 @@
 body {
-  background-color: blue;
+  background-color: navajowhite;
+  color: tomato;
+  font-family: sans-serif;
+  font-size: 17px;
+  margin: 100px;
+}
+a{
+  color: teal;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+a:hover {
+  color: pink;
+
+}
+#images {
+  margin: 0;
+  text-align: center;
+}
+#images img {
+  mex-width: 100%;
+  margin: 25px 0;
 }
