--- a/Css/main.css
+++ b/Css/main.css
@@ -16,10 +16,11 @@ a:hover {
 
 }
 #images {
+  background-color: navajowhite;
   margin: 0;
   text-align: center;
 }
 #images img {
-  mex-width: 100%;
+  max-width: 100%;
   margin: 25px 0;
 }
