--- a/Css/main.css
+++ b/Css/main.css
@@ -2,13 +2,13 @@ body {
   background-color: navajowhite;
   color: tomato;
   font-family: sans-serif;
-  font-size: 17px;
+  font-size: 20px;
   margin: 100px;
 }
 a{
   color: teal;
   text-decoration: none;
-  text-transform: uppercase;
+  text-transform: lowercase;
   letter-spacing: 2px;
 }
 a:hover {
