--- a/Project1/main.css
+++ b/Project1/main.css
@@ -1,8 +1,8 @@
 body {
   background-color: navajowhite;
   color: lightblue;
-  font-family: sans-serif;
-  font-size: 20px;
+  font-family: baskerville;
+  font-size: 22px;
   margin: 100px;
   text-align:center;
 }
