--- a/e4/main.css
+++ b/e4/main.css
@@ -3,7 +3,11 @@ body {
   color: lightseagreen;
   font-family: sans-serif;
   font-size: 20px;
-  margin: 100px;
+  margin: 100px 400px;
+}
+.container {
+  width: 50%;
+  margin: 100px auto;
 }
 p {
   color: salmon;
