--- a/e6/css/main2.css
+++ b/e6/css/main2.css
@@ -8,7 +8,6 @@ body {
 }
 .block-1, .block-2, .block-3, .block-4 {
   float: left;
-  opacity: 1;
   border-radius: 40%
 }
 .block-1 {
@@ -16,6 +15,7 @@ body {
   height: 37px;
   border: 5px solid teal;
   margin: -45px;
+  opacity: .5;
   background-color: lightsalmon;
 }
 .block-2 {
@@ -26,10 +26,14 @@ body {
   background-color: darkred;
 }
 .block-3 {
+  width: 30px;
+  height: 20px;
   margin: -5px;
   background-color: papayawhip;
 }
 .block-4 {
+  width: 14px;
+  height:29px;
   margin: -3px;
   background-color: mediumaquamarine;
 }
