--- a/e6/css/main3.css
+++ b/e6/css/main3.css
@@ -10,28 +10,28 @@ body {
   float: left;
 }
 .block-1 {
-  width: 45px;
-  height: 37px;
-  border: 4px solid #0E6655;
-  margin: -15px 10px;
-  opacity: .5;
-  background-color: #A9CCE3;
-  border-radius: 80%
-}
-.block-2 {
-  width: 85px;
-  height: 77px;
-  border: 4px solid teal;
+  width: 27px;
+  height: 95px;
   margin: 15px 10px;
   opacity: .5;
-  background-color: lightsalmon;
+  background-color: #0A1B2A;
+  border-radius: -20%
+}
+.block-2 {
+  width: 105px;
+  height: 77px;
+  border: 4px solid #0B615E;
+  margin: 15px 10px;
+  opacity: .5;
+  background-color: #B40404;
+  border-radius: 80%
 }
 .block-3 {
   width: 45px;
   height: 27px;
-  border: 4px solid #935116;
+  border: 4px solid #DF7401;
   margin: 15px 10px;
   opacity: .5;
-  background-color: #F5CBA7;
+  background-color: #8A0A4B;
   border-radius: -10%
 }
