--- a/e6/css/main3.css
+++ b/e6/css/main3.css
@@ -10,25 +10,24 @@ body {
   float: left;
 }
 .block-1 {
-  width: 27px;
-  height: 95px;
+  width: 7px;
+  height: 105px;
   margin: 15px 10px;
-  opacity: .5;
-  background-color: #0A1B2A;
+  background-color: #0B3B3B;
   border-radius: -20%
 }
 .block-2 {
-  width: 105px;
-  height: 77px;
+  width: 45px;
+  height: 87px;
   border: 4px solid #0B615E;
   margin: 15px 10px;
-  opacity: .5;
-  background-color: #B40404;
+  opacity: .6;
+  background-color: #FA5858;
   border-radius: 80%
 }
 .block-3 {
-  width: 45px;
-  height: 27px;
+  width: 25px;
+  height: 7px;
   border: 4px solid #DF7401;
   margin: 15px 10px;
   opacity: .5;
