--- a/Project1/main.css
+++ b/Project1/main.css
@@ -20,3 +20,9 @@ a{
   text-decoration:none;
   transition: color 1s ease;
 }
+.container {
+  background-color: #EFF8FB;
+  margin: 100px auto;
+  width: 75%;
+  padding: 30px;
+}
