--- a/Project1/main.css
+++ b/Project1/main.css
@@ -1,8 +1,8 @@
 body {
   background-color: #FBF2EF;
   color: #A4A4A4;
-  font-family: 'Cormorant Garamond', sans-serif;
-  font-size: 22px;
+  font-family: 'Cormorant Infant';
+  font-size: 23px;
   margin: 100px;
   text-align:center;
 }
