--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body {
-  background-color: antiquewhite;
+  background-color: #F5FBEF;
   color: lightseagreen;
-  font-family: sans-serif;
+  font-family: 'Baloo';
   font-size: 20px;
   margin: 100px;
 }
