--- a/e4/main.css
+++ b/e4/main.css
@@ -1,7 +1,7 @@
 body {
   background-color: antiquewhite;
   color: lightseagreen;
-  font-family: sans-serif;
+  font-family: serif;
   font-size: 20px;
   margin: 100px 400px;
 }
