--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ a:hover {
   color: pink;
 }
 #images {
-  background-color: navajowhite;
+  background-color: #F5FBEF;
   margin: 0;
   text-align: center;
 }
