--- a/e8/css/main2.css
+++ b/e8/css/main2.css
@@ -2,18 +2,38 @@ body {
   margin: 0;
   background-color: #FCF4D0;
 }
-.board {
-  width: 800px;
+.container {
+  width: 900px;
   margin: 100px auto;
 }
-.red, .white {
+.header, .subhead, .column, .column2, .footer {
   float: left;
-  width: 100px;
+}
+.header {
+  width: 900px;
   height: 100px;
+  background-color: red;
 }
-.red {
-  background-color: #25DEB1;
+.subhead {
+  width: 900px;
+  height: 50px;
+  margin: 25px 0px 25px 0px;
+  background-color: red;
 }
-.white {
-  background-color: #A6F3E1;
+.column {
+  width: 283.33px;
+  height: 600px;
+  background-color: red;
+}
+.column2 {
+  width: 283.33px;
+  height: 600px;
+  background-color: red;
+  margin: 0px 25px;
+}
+.footer {
+  width: 900px;
+  height: 75px;
+  margin: 25px 0px 0px 0px;
+  background-color: red;
 }
