--- a/e8/css/main2.css
+++ b/e8/css/main2.css
@@ -12,28 +12,28 @@ body {
 .header {
   width: 900px;
   height: 100px;
-  background-color: red;
+  background-color: #25DEB1;
 }
 .subhead {
   width: 900px;
   height: 50px;
   margin: 25px 0px 25px 0px;
-  background-color: red;
+  background-color: #25DEB1;
 }
 .column {
   width: 283.33px;
   height: 600px;
-  background-color: red;
+  background-color: #25DEB1;
 }
 .column2 {
   width: 283.33px;
   height: 600px;
-  background-color: red;
+  background-color: #25DEB1;
   margin: 0px 25px;
 }
 .footer {
   width: 900px;
   height: 75px;
   margin: 25px 0px 0px 0px;
-  background-color: red;
+  background-color: #25DEB1;
 }
