--- a/e8/css/main3.css
+++ b/e8/css/main3.css
@@ -12,12 +12,13 @@ body {
 .header {
   width: 900px;
   height: 100px;
+  margin-bottom: 75px;
   background-color: #25DEB1;
 }
 .pic {
   width: 800px;
   height: 300px;
-  margin: 75px 15px 15px 0px;
+  margin: 0px 15px 15px 0px;
   background-color: #25DEB1;
 }
 .caption {
@@ -28,6 +29,5 @@ body {
 .text {
   width: 85px;
   height: 150px;
-  margin-top: 75px;
   background-color: #25DEB1;
 }
