--- a/e8/css/main3.css
+++ b/e8/css/main3.css
@@ -6,7 +6,7 @@ body {
   width: 900px;
   margin: 100px auto;
 }
-.header, .pic, .caption, .text {
+.header, .pic, .caption, .text, .text2 {
   float: left;
 }
 .header {
@@ -29,6 +29,11 @@ body {
   background-color: #25DEB1;
 }
 .text {
+  width: 85px;
+  height: 150px;
+  background-color: #25DEB1;
+}
+.text2 {
   width: 85px;
   height: 150px;
   background-color: #25DEB1;
