--- a/e8/css/main4.css
+++ b/e8/css/main4.css
@@ -6,34 +6,75 @@ body {
   width: 1056.6px;
   margin: 100px auto;
 }
-.left, .top, .right, .leftsquare, .rightsquare {
+.container2 {
+  width: 1056.6px;
+  height: 535px;
+}
+.container3 {
+  width: 1056.6px;
+  height: 535px;
+}
+.left, .top, .right, .leftsquare, .rightsquare, .left2, .top2, .right2, .leftsquare2, .rightsquare2  {
   float: left;
 }
 .left {
   width: 128.3px;
   height: 535px;
-  margin-bottom: 75px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  background-color: #25DEB1;
+}
+.left2 {
+  width: 128.3px;
+  height: 535px;
+  margin-right: 10px;
   background-color: #25DEB1;
 }
 .top {
   width: 780px;
   height: 140px;
-  margin-right: 15px;
+  margin-bottom: 10px;
+  background-color: #25DEB1;
+}
+.top2 {
+  width: 780px;
+  height: 140px;
+  margin-top: 10px;
   background-color: #25DEB1;
 }
 .right {
   width: 128.3px;
   height: 535px;
-  margin-top: 15px;
-  margin-bottom: 75px;
+  margin-left: 10px;
+  margin-bottom: 10px;
+  background-color: #25DEB1;
+}
+.right2 {
+  width: 128.3px;
+  height: 535px;
+  margin-left: 10px;
   background-color: #25DEB1;
 }
 .leftsquare {
   width: 385px;
   height: 385px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  background-color: #25DEB1;
+}
+.leftsquare2 {
+  width: 385px;
+  height: 385px;
+  margin-right: 10px;
   background-color: #25DEB1;
 }
 .rightsquare {
+  width: 385px;
+  height: 385px;
+  margin-bottom: 10px;
+  background-color: #25DEB1;
+}
+.rightsquare2 {
   width: 385px;
   height: 385px;
   background-color: #25DEB1;
