--- a/e8/css/main5.css
+++ b/e8/css/main5.css
@@ -3,21 +3,27 @@ body {
   background-color: #FCF4D0;
 }
 .container {
-  width: 980px;
+  width: 950px;
   margin: 100px auto;
   background-color: #25DEB1;
 }
 .container2 {
-  width: 300px;
-  margin: 0px 2px;
+  width: 325px;
+  margin: 0px 5px;
 }
 .container3 {
-  width: 300px;
+  width: 310px;
 }
-.short, .thin, .medium, .tall, .container1, .container2,.container3 {
+.short, .short2, .thin, .medium, .tall, .container1, .container2,.container3 {
   float: left;
 }
 .short {
+  width: 33.125px;
+  height: 60px;
+  margin: 2px;
+  background-color: #25DEB1;
+}
+.short2 {
   width: 33.125px;
   height: 60px;
   margin: 2px;
@@ -33,7 +39,7 @@ body {
   background-color: #25DEB1;
   width: 70.25px;
   height: 120px;
-  margin: 2px 2px;
+  margin: 2px 4px 0px 0px;
 }
 .tall {
   background-color: #25DEB1;
