--- a/e8/css/main4_corrected.css
+++ b/e8/css/main4_corrected.css
@@ -1,79 +1,36 @@
 body {
   margin: 0;
-  background-color: #FCF4D0;
+  background-color: lightgreen;
 }
-.container {
-  width: 1060px;
+* {
+  box-sizing: border-box;
+}
+.court {
+  width: 900px;
   margin: 100px auto;
 }
-.container2 {
-  width: 1060px;
-  height: 535px;
+.single {
+  width: 600px;
+  height: 600px;
 }
-.container3 {
-  width: 1060px;
-  height: 535px;
+.side {
+  width: 150px;
+  height: 600px;
+  background-color: blue;
+  border: 5px solid white;
 }
-.left, .top, .right, .leftsquare, .rightsquare, .left2, .top2, .right2, .leftsquare2, .rightsquare2  {
+.side, .back, .service, .single {
   float: left;
 }
-.left {
-  width: 128.3px;
-  height: 535px;
-  margin-right: 10px;
-  background-color: #25DEB1;
+.service {
+  width: 300px;
+  height: 500px;
+  background-color: blue;
+  border: 5px solid white;
 }
-.left2 {
-  width: 128.3px;
-  height: 535px;
-  margin-right: 10px;
-  background-color: #25DEB1;
-}
-.top {
-  width: 780px;
-  height: 140px;
-  background-color: #25DEB1;
-}
-.top2 {
-  width: 780px;
-  height: 140px;
-  background-color: #25DEB1;
-}
-.right {
-  width: 128.3px;
-  height: 535px;
-  margin-left: 10px;
-  background-color: #25DEB1;
-}
-.right2 {
-  width: 128.3px;
-  height: 535px;
-  margin-left: 10px;
-  background-color: #25DEB1;
-}
-.leftsquare {
-  width: 385px;
-  height: 385px;
-  margin-right: 10px;
-  margin-top: 10px;
-  background-color: #25DEB1;
-}
-.leftsquare2 {
-  width: 385px;
-  height: 385px;
-  margin-right: 10px;
-  margin-bottom: 10px;
-  background-color: #25DEB1;
-}
-.rightsquare {
-  width: 385px;
-  height: 385px;
-  margin-top: 10px;
-  background-color: #25DEB1;
-}
-.rightsquare2 {
-  width: 385px;
-  height: 385px;
-  margin-bottom: 10px;
-  background-color: #25DEB1;
+.back {
+  width: 600px;
+  height: 100px;
+  background-color: blue;
+  border: 5px solid white;
 }
