--- a/e8/css/main4_corrected.css
+++ b/e8/css/main4_corrected.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background-color: lightgreen;
+  background-color: #FCF4D0;
 }
 * {
   box-sizing: border-box;
@@ -16,7 +16,7 @@ body {
 .side {
   width: 150px;
   height: 600px;
-  background-color: blue;
+  background-color: #25DEB1;
   border: 5px solid white;
 }
 .side, .back, .service, .single {
@@ -25,12 +25,12 @@ body {
 .service {
   width: 300px;
   height: 500px;
-  background-color: blue;
+  background-color: #25DEB1;
   border: 5px solid white;
 }
 .back {
   width: 600px;
   height: 100px;
-  background-color: blue;
+  background-color: #25DEB1;
   border: 5px solid white;
 }
