--- a/e12/css/main.css
+++ b/e12/css/main.css
@@ -48,7 +48,7 @@ p {
 
 @media only screen and (max-width: 1024px) {
     body {
-      background-color: yellow;
+      background-color: #F6DFCF;
     }
     h4  {
       font-size: 70px;
@@ -57,7 +57,7 @@ p {
 
 @media only screen and (max-width: 768px) {
     body {
-      background-color: coral;
+      background-color: #F7C9A9;
     }
     h1 {
       font-size: 45px;
