--- a/e12/css/main2.css
+++ b/e12/css/main2.css
@@ -22,3 +22,16 @@ p {
   font-size: ;
   line-height: 1.4;
 }
+.container {
+  width: 100%;
+  margin-top: 200px;
+  margin-bottom: 100px;
+}
+.topBar {
+  background-color: #E5DCDC;
+}
+.title {
+  margin: 0px auto;
+  width: 100%;
+  text-align: center;
+}
