--- a/e12/css/main2.css
+++ b/e12/css/main2.css
@@ -12,8 +12,8 @@ h2 {
   color: #B75F5F;
 }
 p {
-  font-family: ;
-  font-size: ;
+  font-family: InaiMathi;
+  font-size: 29px;
   line-height: 1.4;
 }
 .container {
@@ -24,16 +24,20 @@ p {
 .header {
   background-color: #E5DCDC;
   text-align: center;
-  margin-bottom: 90px;
 }
 .leftsquares {
   height: 1000px;
   width: 50%;
   float: left;
+  margin-top: 70px;
 }
 .text1 {
-  height: 1000px;
   width: 50%;
+  margin-left: 80px;
+}
+.text2 {
+  width: 50%;
+  margin-left: 50%;
 }
 .littlesquare {
   background-color: #E5DCDC;
@@ -66,4 +70,13 @@ p {
   width: 100%;
   height: 250px;
   float: left;
+}
+.image1 {
+  width: 50%;
+  margin-left: 50%;
+  float: left;
+}
+img {
+  width: 50%;
+  margin-left: 50%;
 }
