--- a/e12/css/main2.css
+++ b/e12/css/main2.css
@@ -9,6 +9,7 @@ h1 {
 h2 {
   font-family: Helvetica Neue;
   font-size: 38px;
+  font-weight: lighter;
   color: #B75F5F;
 }
 p {
@@ -24,27 +25,30 @@ p {
 .header {
   background-color: #E5DCDC;
   text-align: center;
+  margin-bottom: 70px;
 }
 .leftsquares {
   height: 1000px;
   width: 50%;
   float: left;
-  margin-top: 70px;
+  z-index: 1;
 }
 .text1 {
   width: 50%;
-  margin-left: 80px;
+  position: relative;
+  z-index: 2;
 }
 .text2 {
   width: 50%;
   margin-left: 50%;
+  position: absolute;
+  z-index: 2;
 }
 .littlesquare {
   background-color: #E5DCDC;
   width: 100%;
   height: 250px;
   float: left;
-  margin-bottom: 400px;
 }
 .littlesquare2 {
   background-color: blue;
@@ -55,15 +59,14 @@ p {
 .rightsquares {
   height: 1000px;
   width: 50%;
-  float: left;
   margin-left: 50%;
+  z-index: 1;
 }
 .littlesquare3 {
   background-color: green;
   width: 100%;
   height: 250px;
   float: left;
-  margin-bottom: 400px;
 }
 .littlesquare4 {
   background-color: red;
@@ -71,12 +74,22 @@ p {
   height: 250px;
   float: left;
 }
-.image1 {
-  width: 50%;
-  margin-left: 50%;
+.littlesquareW {
+  background-color: white;
+  width: 100%;
+  height: 500px;
   float: left;
 }
-img {
+.image1 {
   width: 50%;
-  margin-left: 50%;
+  float: left;
+  margin-top: 260px;
+}
+img {
+  width: 100%;
+}
+.image2 {
+  width: 50%;
+  float: left;
+  margin-top: 260px;
 }
