--- a/Project3/css/main.css
+++ b/Project3/css/main.css
@@ -1,4 +1,26 @@
+body {
+  margin: 0;
+}
 .container {
   margin: 30px 0 40px 0;
   width: 100%;
+}
+.header {
+  width: 100%;
+}
+.pic1 {
+  width: 40%;
+  float: left;
+}
+img {
+  width: 100%;
+}
+.titleAuthor {
+  margin-top: 100px;
+  width: 40%;
+  float: left;
+  background-color: white;
+}
+.bodyContent {
+  
 }
