--- a/Project3/css/main.css
+++ b/Project3/css/main.css
@@ -12,6 +12,10 @@ body {
   width: 40%;
   float: left;
 }
+.pic2 {
+  width: 40%;
+  float: left;
+}
 img {
   width: 100%;
 }
@@ -22,5 +26,7 @@ img {
   background-color: white;
 }
 .bodyContent {
-  
+  width: 100%;
+  float: left;
+  margin-top: 200px;
 }
