--- a/Project3/css/main.css
+++ b/Project3/css/main.css
@@ -30,3 +30,11 @@ img {
   float: left;
   margin-top: 200px;
 }
+.introText {
+  float: left;
+  width: 40%;
+}
+.introSection {
+  margin-left: auto;
+  margin-right: auto;
+}
