--- a/Project3/css/main.css
+++ b/Project3/css/main.css
@@ -10,18 +10,18 @@ body {
   float: left;
   margin-bottom: 200px;
 }
+.titleAuthor {
+  margin-top: 100px;
+  width: 50%;
+  float: left;
+  background-color: white;
+}
 .pic1 {
-  width: 40%;
+  width: 50%;
   float: left;
 }
 img {
   width: 100%;
-}
-.titleAuthor {
-  margin-top: 100px;
-  width: 40%;
-  float: left;
-  background-color: white;
 }
 .bodyContent {
   width: 100%;
@@ -32,8 +32,10 @@ img {
 .introText {
   float: left;
   width: 40%;
+  margin-left: 30px;
 }
 .pic2 {
+  margin-left: 30px;
   width: 40%;
   float: left;
 }
