--- a/Project3/css/main.css
+++ b/Project3/css/main.css
@@ -39,3 +39,15 @@ img {
   width: 40%;
   float: left;
 }
+.section2 {
+  width: 50%;
+  margin-left: 50%;
+}
+.pic3 {
+  width: 100%;
+  float: left;
+}
+.text1 {
+  width: 100%;
+  float: left;
+}
