--- a/Project3/css/main.css
+++ b/Project3/css/main.css
@@ -51,3 +51,14 @@ img {
   width: 100%;
   float: left;
 }
+.section3 {
+  width: 100%;
+}
+.pic4 {
+  width: 50%;
+  float: left;
+}
+.text2 {
+  width: 50%;
+  float: left;
+}
