--- a/Project3/css/main.css
+++ b/Project3/css/main.css
@@ -2,7 +2,6 @@ body {
   margin: 0;
 }
 .container {
-  margin: 30px 0 40px 0;
   width: 100%;
 }
 .header {
@@ -59,6 +58,29 @@ img {
   float: left;
 }
 .text2 {
+  width: 50%;
+  float: left;
+}
+.section4 {
+  width: 100%;
+}
+.pic5 {
+  width: 50%;
+  float: left;
+  margin-left: 50%;
+}
+.text3 {
+  width: 50%;
+  float: left;
+}
+.section5 {
+  width: 100%;
+}
+.pic6 {
+  width: 50%;
+  float: left;
+}
+.text4 {
   width: 50%;
   float: left;
 }
