--- a/Project3/css/main.css
+++ b/Project3/css/main.css
@@ -84,3 +84,15 @@ img {
   width: 50%;
   float: left;
 }
+.section6 {
+  width: 100%;
+}
+.pic7 {
+  width: 50%;
+  float: left;
+  margin-left: 50%;
+}
+.text5 {
+  width: 50%;
+  float: left;
+}
