--- a/Project3/css/main.css
+++ b/Project3/css/main.css
@@ -3,6 +3,7 @@ body {
 }
 .container {
   width: 100%;
+  margin: 30px 0 40px 0;
 }
 .header {
   width: 100%;
@@ -28,14 +29,16 @@ img {
 .introSection {
   width: 100%;
   }
+h3 {
+  float: left;
+  width: 100%;
+}
 .introText {
   float: left;
-  width: 40%;
-  margin-left: 30px;
+  width: 50%;
 }
 .pic2 {
-  margin-left: 30px;
-  width: 40%;
+  width: 50%;
   float: left;
 }
 .section2 {
@@ -94,5 +97,17 @@ img {
 }
 .text5 {
   width: 50%;
+  float: left;
+}
+.section7 {
+  width: 50%;
+  padding-left: 60px;
+}
+.pic8 {
+  width: 100%;
+  float: left;
+}
+.text6 {
+  width: 100%;
   float: left;
 }
