--- a/Project3/css/main.css
+++ b/Project3/css/main.css
@@ -45,6 +45,46 @@ h4 {
   font-size: 16px;
   font-style: italic;
 }
+h5 {
+  float: left;
+  width: 10%;
+  font-family: chaparral-pro, serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 61px;
+}
+h6 {
+  float: left;
+  width: 10%;
+  font-family: chaparral-pro, serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 61px;
+}
+h7 {
+  float: left;
+  width: 10%;
+  font-family: chaparral-pro, serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 61px;
+}
+h8 {
+  float: left;
+  width: 10%;
+  font-family: chaparral-pro, serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 61px;
+}
+h9 {
+  float: left;
+  width: 10%;
+  font-family: chaparral-pro, serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 61px;
+}
 p {
   font-family: Helvetica Neue;
   font-size: 16px;
