--- a/Project3/css/main.css
+++ b/Project3/css/main.css
@@ -110,6 +110,16 @@ h3 {
   width: 50%;
   margin-left: 50%;
 }
+.greenShape {
+  background-color: #A2961B;
+  height: 800px;
+  width: 300px;
+}
+.greenShape2 {
+  background-color: blue;
+  height: 800px;
+  width: 82px;
+}
 .pic3 {
   width: 100%;
   float: left;
