--- a/Project3/css/main.css
+++ b/Project3/css/main.css
@@ -116,7 +116,7 @@ h3 {
   width: 300px;
 }
 .greenShape2 {
-  background-color: blue;
+  background-color: #A2961B;
   height: 800px;
   width: 82px;
 }
