--- a/Project3/css/main.css
+++ b/Project3/css/main.css
@@ -48,7 +48,7 @@ img {
   width: 100%;
 }
 .bodyContent {
-  width: 80%;
+  width: 100%;
   margin:0px auto;
 }
 .introSection {
@@ -104,6 +104,7 @@ p {
   font-family: Helvetica Neue;
   font-size: 16px;
   font-weight: normal;
+  line-height: 1.4;
 }
 h3 {
   float: left;
@@ -116,9 +117,10 @@ h3 {
 .introText {
   float: left;
   width: 50%;
+  margin-right: 20px;
 }
 .pic2 {
-  width: 50%;
+  width: 47%;
   float: left;
 }
 .section2 {
