--- a/Project3/css/main.css
+++ b/Project3/css/main.css
@@ -80,7 +80,11 @@ h6 {
   font-weight: 700;
   font-style: normal;
   font-size: 61px;
-  background-color: blue;
+  /* background-color: blue; */
+  padding-left: 20px;
+  padding-right: 20px;
+  /* padding-bottom: 100px; */
+  /* padding-top: 20px; */
 }
 /* h7 { */
   /* float: left; */
@@ -166,13 +170,25 @@ h3 {
 .section3 {
   width: 100%;
   margin-top: 70%;
+  margin-bottom: 200%;
+  position: relative;
 }
 .pic4 {
   width: 50%;
   float: left;
+  /* background: url(../pictures/P2_pics/Almonds_5.jpg) no-repeat center center; */
+}
+.number2 {
+  float: left;
+  position: absolute;
+  left: 30px;
+  background-color: yellow;
 }
 .text2 {
   width: 50%;
+  position: absolute;
+  top: 100px;
+  margin-left: 50%;
   float: left;
 }
 .section4 {
