--- a/Project3/css/main.css
+++ b/Project3/css/main.css
@@ -80,7 +80,7 @@ h6 {
   font-weight: 700;
   font-style: normal;
   font-size: 61px;
-  background-color: blue;
+  /* background-color: blue; */
   /* padding-left: 20px; */
   /* padding-right: 20px; */
   /* padding-bottom: 100px; */
@@ -349,7 +349,8 @@ h3 {
     top: 520px;
   }
   .number3 {
-    bottom: 10px;
+    top: 380px;
+    right: 523px;
   }
   .text3 {
     width: 37%;
