--- a/Project3/css/main.css
+++ b/Project3/css/main.css
@@ -357,9 +357,159 @@ h3 {
     margin-left: 12%;
     top: 570px;
   }
+  .section5 {
+    top: 650px;
+  }
+  .number4 {
+    left: 60%;
+    top: 112%;
+    left: 52%;
+  }
+  .text4 {
+    top: 138%;
+  }
+  .section6 {
+    top: 1400px;
+  }
+  .number5 {
+    left: 47%;
+    top: 180%;
+    left: 45%;
+    height: 100px;
+  }
+  .text5 {
+    top: 100px;
+    width: 36%;
+    margin-left: 110px;
+  }
+  .section7 {
+    top: 1800px;
+  }
 }
 @media only screen and (max-width: 768px) {
-
+  h1 {
+    font-size: 38px;
+  }
+  .header {
+    margin-bottom: 90px;
+    /* added relative positioning to let inside parts's positioning relative to this div's info. */
+    position: relative;
+  }
+  .titleAuthor {
+    padding: 17px;
+    top: 130px;
+    left: 302px;
+  }
+  .byline {
+    bottom: 0px;
+    top: 50px;
+    right: 80px;
+  }
+  h2 {
+    line-height: .5;
+  }
+  .introSection {
+    width: 65%;
+    margin: 0px auto;
+    }
+  .introText {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px;
+  }
+  h3 {
+    font-size: 20px;
+  }
+  .pic2 {
+    width: 85%;
+    margin-left: 30px;
+  }
+  .section2 {
+    top: 100px;
+    width: 65%;
+    margin-left:auto;
+    margin-right:auto;
+  }
+  h5 {
+    padding-bottom: 0px;
+  }
+  .pic3 {
+    width: 100%;
+    height: 400px;
+  }
+  .text1 {
+    width: 100%;
+    margin-top: 47px;
+    margin-left:auto;
+    margin-right: auto;
+  }
+  h5 {
+    padding-top: 116px;
+  }
+  .number1 {
+    top: 440px;
+    left: 25px;
+  }
+  .section3 {
+    margin-top: 157%;
+    width: 65%;
+  }
+  .pic4 {
+    width: 100%;
+    margin-right: 20px;
+  }
+  .number2 {
+    right: 43%;
+    top: 132px;
+    left: 40px;
+    bottom: 0px;
+  }
+  .text2 {
+    width: 100%;
+    margin-top: 230px;
+    margin-left: 95px;
+  }
+  .section4 {
+    top: 520px;
+  }
+  .number3 {
+    top: 380px;
+    right: 523px;
+  }
+  .text3 {
+    width: 37%;
+    margin-left: 12%;
+    top: 570px;
+  }
+  .section5 {
+    top: 650px;
+  }
+  .number4 {
+    left: 60%;
+    top: 112%;
+    left: 52%;
+  }
+  .text4 {
+    top: 138%;
+  }
+  .section6 {
+    top: 1400px;
+  }
+  .number5 {
+    left: 47%;
+    top: 180%;
+    left: 45%;
+    height: 100px;
+  }
+  .text5 {
+    top: 100px;
+    width: 36%;
+    margin-left: 110px;
+  }
+  .section7 {
+    top: 1800px;
+  }
 }
 @media only screen and (max-width: 320px) {
 
