--- a/Project3/css/main.css
+++ b/Project3/css/main.css
@@ -374,7 +374,6 @@ h3 {
   .number5 {
     left: 47%;
     top: 180%;
-    left: 45%;
     height: 100px;
   }
   .text5 {
@@ -471,46 +470,242 @@ h3 {
     margin-left: 95px;
   }
   .section4 {
-    top: 520px;
+    top: 535px;
+    width: 65%;
+    margin-left:auto;
+    margin-right:auto;
+  }
+  .pic5 {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 230px;
   }
   .number3 {
-    top: 380px;
-    right: 523px;
+    top: 870px;
+    right: 30px;
   }
   .text3 {
-    width: 37%;
-    margin-left: 12%;
-    top: 570px;
+    width: 100%;
+    top: 1070px;
+    margin-left:auto;
+    margin-right:auto;
   }
   .section5 {
-    top: 650px;
+    top: 1000px;
+    width: 65%;
+  }
+  .pic6 {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
   }
   .number4 {
-    left: 60%;
-    top: 112%;
-    left: 52%;
+    left: 6%;
+    top: 145%;
   }
   .text4 {
-    top: 138%;
+    top: 168%;
+    left: 0%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
   }
   .section6 {
-    top: 1400px;
+    top: 1940px;
+    width: 65%;
   }
   .number5 {
-    left: 47%;
-    top: 180%;
+    margin-top: 37%;
+    top: 380%;
     left: 45%;
     height: 100px;
   }
   .text5 {
-    top: 100px;
-    width: 36%;
+    top: 370px;
+    width: 100%;
     margin-left: 110px;
   }
+  .pic7 {
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+ }
   .section7 {
-    top: 1800px;
+    top: 2400px;
+    width: 80%;
+    margin-left: 0;
+  }
+  .pic8 {
+    width: 100%;
+    margin-left: 0;
+  }
+  .text6 {
+    width: 90%;
+    margin-left: 12%;
   }
 }
-@media only screen and (max-width: 320px) {
-
+@media only screen and (max-width: 504px) {
+  h1 {
+    font-size: 38px;
+  }
+  .pic1 {
+    width: 100%;
+  }
+  .header {
+    margin-bottom: 90px;
+    width: 100%;
+  }
+  .titleAuthor {
+    padding: 17px;
+    top: 330px;
+    left: 0px;
+    width: 100%;
+  }
+  .byline {
+    bottom: 0px;
+    top: 100px;
+    right: 0px;
+    width: 100%;
+  }
+  h2 {
+    line-height: .5;
+  }
+  .introSection {
+    width: 65%;
+    margin: 0px auto;
+    }
+  .introText {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px;
+  }
+  h3 {
+    font-size: 20px;
+  }
+  .pic2 {
+    width: 85%;
+    margin-left: 30px;
+  }
+  .section2 {
+    top: 100px;
+    width: 65%;
+    margin-left:auto;
+    margin-right:auto;
+  }
+  h5 {
+    padding-bottom: 0px;
+  }
+  .pic3 {
+    width: 100%;
+    height: 400px;
+  }
+  .text1 {
+    width: 100%;
+    margin-top: 47px;
+    margin-left:auto;
+    margin-right: auto;
+  }
+  h5 {
+    padding-top: 116px;
+  }
+  .number1 {
+    top: 440px;
+    left: 25px;
+  }
+  .section3 {
+    margin-top: 157%;
+    width: 65%;
+  }
+  .pic4 {
+    width: 100%;
+    margin-right: 20px;
+  }
+  .number2 {
+    right: 43%;
+    top: 132px;
+    left: 40px;
+    bottom: 0px;
+  }
+  .text2 {
+    width: 100%;
+    margin-top: 230px;
+    margin-left: 95px;
+  }
+  .section4 {
+    top: 535px;
+    width: 65%;
+    margin-left:auto;
+    margin-right:auto;
+  }
+  .pic5 {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 230px;
+  }
+  .number3 {
+    top: 870px;
+    right: 30px;
+  }
+  .text3 {
+    width: 100%;
+    top: 1070px;
+    margin-left:auto;
+    margin-right:auto;
+  }
+  .section5 {
+    top: 1000px;
+    width: 65%;
+  }
+  .pic6 {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .number4 {
+    left: 6%;
+    top: 145%;
+  }
+  .text4 {
+    top: 168%;
+    left: 0%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+  }
+  .section6 {
+    top: 1940px;
+    width: 65%;
+  }
+  .number5 {
+    margin-top: 37%;
+    top: 380%;
+    left: 45%;
+    height: 100px;
+  }
+  .text5 {
+    top: 370px;
+    width: 100%;
+    margin-left: 110px;
+  }
+  .pic7 {
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+ }
+  .section7 {
+    top: 2400px;
+    width: 80%;
+    margin-left: 0;
+  }
+  .pic8 {
+    width: 100%;
+    margin-left: 0;
+  }
+  .text6 {
+    width: 90%;
+    margin-left: 12%;
+  }
 }
