--- a/e14/main.css
+++ b/e14/main.css
@@ -6,6 +6,7 @@ body {
   height: 450px;
   position: relative;
   left: 35%;
+  margin-top: 12%;
   /* top: 45%; */
   background-color: #FFEECF;
 }
@@ -14,7 +15,7 @@ body {
   width: 185px;
   height: 30px;
   top: 33%;
-  left: 25%;
+  left: 27%;
   background-color: #A9F7BE;
 }
 .ovensurface {
@@ -22,7 +23,7 @@ body {
   width: 210px;
   height: 30px;
   top: 39%;
-  left: 22%;
+  left: 24%;
   background-color: #8BE3A3;
 }
 .ovenbody {
@@ -30,6 +31,6 @@ body {
   height: 150px;
   background-color: #A9F7BE;
   position: absolute;
-  left: 22%;
+  left: 24%;
   top: 45%;
 }
