--- a/e14/main.css
+++ b/e14/main.css
@@ -271,3 +271,27 @@ body {
   height: 12px;
   background-color: #502006;
 }
+.plate, .stand, .base {
+  position: absolute;
+  background-color: #C6F1FC;
+}
+.plate {
+  top: 71%;
+  width: 190px;
+  height: 14px;
+  border-radius: 50%;
+  left: 37.5%;
+}
+.stand {
+  top: 72%;
+  width: 25px;
+  height: 65px;
+  left: 58%;
+}
+.base {
+  top: 86%;
+  width: 50px;
+  height: 11px;
+  border-radius: 50%;
+  left:54.75%;
+}
